fixed table overflow issue and modal action button enable/disable issue

--- a/src/app/components/core/manage-services/list-manage-services.component.css
+++ b/src/app/components/core/manage-services/list-manage-services.component.css
@@ -37,7 +37,7 @@ tr:hover .btn-delete {
     border-top: 1px dashed silver;
 }
 
-.card-content {
+.change-overflow {
     overflow: visible;
 }
 
